tests/snapshots/examples_fixtures/basics__comparison.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/comparison.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
