tests/snapshots/examples_fixtures/basics__diagnostic_comment_trim.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/diagnostic_comment_trim.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
