tests/snapshots/examples_fixtures/basics__factorial.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/factorial.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/basics/factorial.flx:12:5
   |
12 |     print("Result:", result)
   |     ^^^^^

Hint:
  Define it first: let print = ...;
== stdout ==
<not executed>
